--- a/src/client/NodeJS/ms-rest/package.json
+++ b/src/client/NodeJS/ms-rest/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "underscore": "^1.4.0",
     "tunnel": "~0.0.2",
-    "request": "2.72.0",
+    "request": "~2.74.0",
     "duplexer": "~0.1.1",
     "through": "~2.3.4",
     "moment": "^2.14.1"
